# interpretation-boundary-lab

./: LICENSE  README.md  SECURITY.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
cli/: __init__.py  __main__.py  main.py
examples/: ai_moderation.json  legal_compliance.json  safety_triage.json
graph/: __init__.py  replay.py  rotation.py  topology.py
rules/: __init__.py  admissibility.py
schemas/: __init__.py  proposal.py  signal.py  transit.py  verdict.py
tests/: __init__.py  test_admissibility_rules.py  test_adversarial.py  test_graph_topology.py  test_integration.py  test_replay.py  test_sector_rotation.py
